# contentblitz-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: architecture.md  graph.md  presentation.md
evals/: __init__.py  harness.py  loader.py  metrics.py  report.py  schema.py
evals/results/: latest.json  latest.md
plans/: 00_scaffold_mvp_repo.md  01_serpapi_research_agent.md  02_openai_research_summarization.md  03_openai_strategist_brief.md  04_openai_linkedin_writer.md  05_quality_gate_and_revision_loop.md  06_remove_content_brief_alias.md  07_phase2_evals_scaffold.md  08_expand_golden_eval_suite.md  09_expectation_contract_and_quality_pass.md  10_first_pass_quality_and_starter_metrics.md  11_higher_order_quality_checks.md  12_refresh_existing_cases_and_add_three_rewrite_recovery_cases.md  13_case_category_metadata.md  14_category_level_aggregate_metrics.md  15_eval_results_dashboard_in_streamlit.md  16_first_pass_failure_reason_analysis.md  17_split_streamlit_ui_into_tabs.md  18_single_case_harness_flag.md
src/agents/: __init__.py  quality.py  research.py  rewrite.py  router.py  strategist.py  writer_linkedin.py
src/app/: __init__.py  config.py  models.py  state.py
src/integrations/: __init__.py  llm_openai.py  serp.py
src/ui/: __init__.py  streamlit_app.py
src/utils/: text.py  (+2 more)
tests/: test_config.py  test_evals_harness.py  test_llm_openai.py  test_models.py  test_quality.py  test_research_agent.py  test_research_agent_llm.py  test_rewrite_agent.py  test_router.py  test_serp.py  test_strategist_agent.py  test_writer_linkedin_agent.py
(+20 files in other folders)
